<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ticklus</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone</string>
    <string name="name">Name</string>
    <string name="continue_">Continue</string>
    <string name="create_account">Create Account</string>
    <string name="todo">TODO</string>
    <string name="title_activity_home_nav">Home_nav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Wishlist</string>
    <string name="menu_slideshow">My Tickets</string>
    <string name="user_name">User Name</string>
    <string name="user_email">demo@demo.com</string>
    <string name="confirm_password">Confirm Password</string>

</resources>