<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registeration_page_layout"
    android:background="@drawable/gradient_animation"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registeration_page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/innder_const_background"
        android:layout_margin="20dp">


        <TextView
            android:layout_marginTop="50dp"
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginHorizontal="100dp"

            app:cardCornerRadius="400dp"
            app:layout_constraintBottom_toTopOf="@id/name_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/register_text">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/default_user"/>
        </androidx.cardview.widget.CardView>

<!--        <ImageView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/register_text"-->
<!--            app:layout_constraintBottom_toTopOf="@id/name_register"-->
<!--            android:src="@drawable/default_user"-->
<!--            android:layout_marginHorizontal="100dp"/>-->


        <EditText
            app:layout_constraintBottom_toTopOf="@id/Phone_register"
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:elevation="3dp"
            android:background="@drawable/edit_text_theme"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:inputType="phone"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="105dp" />

        <EditText
            app:layout_constraintBottom_toTopOf="@id/email_register"
            android:id="@+id/Phone_register"
            android:layout_width="match_parent"
            android:elevation="3dp"
            android:background="@drawable/edit_text_theme"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:inputType="phone"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="105dp" />

        <EditText
            app:layout_constraintBottom_toTopOf="@id/password_login_page"
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:elevation="3dp"
            android:background="@drawable/edit_text_theme"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="105dp" />

        <EditText
            android:id="@+id/password_login_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_theme"
            android:inputType="textPassword"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:elevation="3dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/registern_btn_register"
            android:layout_marginBottom="20dp" />



        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/registern_btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            app:lottie_rawRes="@raw/continue_button" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>